# pico-sdk-standalone-blink

./: CMakeLists.txt  README.md  main.c
